user-scheduler: use modern kube-scheduler binary and config

--- a/jupyterhub/templates/scheduling/user-scheduler/configmap.yaml
+++ b/jupyterhub/templates/scheduling/user-scheduler/configmap.yaml
@@ -6,8 +6,51 @@ metadata:
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
 data:
-  # ref: https://kubernetes.io/docs/reference/scheduling/config/
+  {{- /*
+    This is configuration of a k8s official kube-scheduler binary running in the
+    user-scheduler pod.
+
+    ref: https://kubernetes.io/docs/reference/scheduling/config/
+    ref: https://kubernetes.io/docs/reference/config-api/kube-scheduler-config.v1beta2/
+    ref: https://kubernetes.io/docs/reference/config-api/kube-scheduler-config.v1beta3/
+
+    v1beta1 can be used with kube-scheduler binary version <=1.21
+    v1beta2 requires kube-scheduler binary version >=1.22
+    v1beta3 requires kube-scheduler binary version >=1.23
+
+    kube-scheduler binaries versioned >=1.21 will error in k8s clusters
+    versioned <=1.20. To support a modern version of kube-scheduler and k8s
+    versions <=1.20 upwards, we provide two scenarios:
+
+    1. For k8s >= 1.21 we use a modern version of kube-scheduler and Helm chart
+       configuration works as expected.
+    2. For k8s <= 1.20 we use a hardcoded version of kube-scheduler (v1.20.15)
+       and configuration (v1beta1) of kube-scheduler.
+  */}}
   config.yaml: |
+    {{- if ge (atoi .Capabilities.KubeVersion.Minor) 21 }}
+    apiVersion: kubescheduler.config.k8s.io/v1beta3
+    kind: KubeSchedulerConfiguration
+    leaderElection:
+      resourceLock: endpoints
+      resourceName: {{ include "jupyterhub.user-scheduler-lock.fullname" . }}
+      resourceNamespace: "{{ .Release.Namespace }}"
+    profiles:
+      - schedulerName: {{ include "jupyterhub.user-scheduler.fullname" . }}
+        {{- with .Values.scheduling.userScheduler.plugins }}
+        plugins:
+          {{- . | toYaml | nindent 10 }}
+        {{- end }}
+        {{- with .Values.scheduling.userScheduler.pluginConfig }}
+        pluginConfig:
+          {{- . | toYaml | nindent 10 }}
+        {{- end }}
+    {{- else }}
+    # WARNING: The tag of this image is hardcoded, and the
+    #          "scheduling.userScheduler.plugins" configuration of the Helm
+    #          chart that generated this resource manifest wasn't respected. If
+    #          you install the Helm chart in a k8s cluster versioned 1.21 or
+    #          higher, your configuration will be respected.
     apiVersion: kubescheduler.config.k8s.io/v1beta1
     kind: KubeSchedulerConfiguration
     leaderElection:
@@ -17,5 +60,29 @@ data:
     profiles:
       - schedulerName: {{ include "jupyterhub.user-scheduler.fullname" . }}
         plugins:
-          {{- .Values.scheduling.userScheduler.plugins | toYaml | nindent 10 }}
+          score:
+            disabled:
+              - name: SelectorSpread
+              - name: TaintToleration
+              - name: PodTopologySpread
+              - name: NodeResourcesBalancedAllocation
+              - name: NodeResourcesLeastAllocated
+              # Disable plugins to be allowed to enable them again with a
+              # different weight and avoid an error.
+              - name: NodePreferAvoidPods
+              - name: NodeAffinity
+              - name: InterPodAffinity
+              - name: ImageLocality
+            enabled:
+              - name: NodePreferAvoidPods
+                weight: 161051
+              - name: NodeAffinity
+                weight: 14631
+              - name: InterPodAffinity
+                weight: 1331
+              - name: NodeResourcesMostAllocated
+                weight: 121
+              - name: ImageLocality
+                weight: 11
+    {{- end }}
 {{- end }}
