--- a/images/hub/requirements.txt
+++ b/images/hub/requirements.txt
@@ -4,40 +4,40 @@
 #
 #    ./dependencies freeze --upgrade
 #
-alembic==1.7.3
+alembic==1.7.6
     # via jupyterhub
 async-generator==1.10
     # via
     #   jupyterhub
     #   jupyterhub-kubespawner
-attrs==21.2.0
+attrs==21.4.0
     # via jsonschema
 bcrypt==3.2.0
     # via
     #   jupyterhub-firstuseauthenticator
     #   jupyterhub-nativeauthenticator
-cachetools==4.2.2
+cachetools==5.0.0
     # via google-auth
-certifi==2021.5.30
+certifi==2021.10.8
     # via
     #   kubernetes
     #   requests
 certipy==0.1.3
     # via jupyterhub
-cffi==1.14.6
+cffi==1.15.0
     # via
     #   bcrypt
     #   cryptography
-charset-normalizer==2.0.6
+charset-normalizer==2.0.12
     # via requests
-cryptography==3.4.8
+cryptography==36.0.1
     # via
     #   josepy
     #   jwcrypto
     #   pyopenssl
 deprecated==1.2.13
     # via jwcrypto
-entrypoints==0.3
+entrypoints==0.4
     # via jupyterhub
 escapism==1.0.1
     # via
@@ -45,32 +45,28 @@ escapism==1.0.1
     #   jupyterhub-ltiauthenticator
 future==0.18.2
     # via pyjwkest
-google-auth==2.1.0
+google-auth==2.6.0
     # via kubernetes
-greenlet==1.1.1
+greenlet==1.1.2
     # via sqlalchemy
-idna==3.2
+idna==3.3
     # via requests
-jinja2==3.0.1
+importlib-metadata==4.11.2
+    # via alembic
+importlib-resources==5.4.0
+    # via
+    #   alembic
+    #   jsonschema
+jinja2==3.0.3
     # via
     #   jupyterhub
     #   jupyterhub-kubespawner
-josepy==1.10.0
+josepy==1.12.0
     # via jupyterhub-ltiauthenticator
-jsonschema==3.2.0
+jsonschema==4.4.0
     # via jupyter-telemetry
 jupyter-telemetry==0.1.0
     # via jupyterhub
-jupyterhub==2.1.1
-    # via
-    #   -r requirements.in
-    #   jupyterhub-firstuseauthenticator
-    #   jupyterhub-kubespawner
-    #   jupyterhub-ldapauthenticator
-    #   jupyterhub-ltiauthenticator
-    #   jupyterhub-nativeauthenticator
-    #   nullauthenticator
-    #   oauthenticator
 jupyterhub-firstuseauthenticator==1.0.0
     # via -r requirements.in
 jupyterhub-hmacauthenticator==1.0
@@ -87,15 +83,25 @@ jupyterhub-nativeauthenticator==1.0.5
     # via -r requirements.in
 jupyterhub-tmpauthenticator==0.6
     # via -r requirements.in
+jupyterhub==2.2.0
+    # via
+    #   -r requirements.in
+    #   jupyterhub-firstuseauthenticator
+    #   jupyterhub-kubespawner
+    #   jupyterhub-ldapauthenticator
+    #   jupyterhub-ltiauthenticator
+    #   jupyterhub-nativeauthenticator
+    #   nullauthenticator
+    #   oauthenticator
 jwcrypto==1.0
     # via jupyterhub-ltiauthenticator
-kubernetes==18.20.0
+kubernetes==23.3.0
     # via jupyterhub-kubespawner
 ldap3==2.9.1
     # via jupyterhub-ldapauthenticator
-mako==1.1.5
+mako==1.1.6
     # via alembic
-markupsafe==2.0.1
+markupsafe==2.1.0
     # via
     #   jinja2
     #   mako
@@ -107,7 +113,7 @@ oauthenticator==14.2.0
     # via
     #   -r requirements.in
     #   jupyterhub-ltiauthenticator
-oauthlib==3.1.1
+oauthlib==3.2.0
     # via
     #   jupyterhub
     #   jupyterhub-ltiauthenticator
@@ -115,32 +121,32 @@ oauthlib==3.1.1
     #   requests-oauthlib
 onetimepass==1.0.1
     # via jupyterhub-nativeauthenticator
-packaging==21.0
+packaging==21.3
     # via jupyterhub
 pamela==1.0.0
     # via jupyterhub
 pem==21.2.0
     # via jupyterhub-ltiauthenticator
-prometheus-client==0.11.0
+prometheus-client==0.13.1
     # via jupyterhub
 psycopg2-binary==2.9.3
     # via -r requirements.in
 py-spy==0.3.11
     # via -r requirements.in
+pyasn1-modules==0.2.8
+    # via google-auth
 pyasn1==0.4.8
     # via
     #   ldap3
     #   pyasn1-modules
     #   rsa
-pyasn1-modules==0.2.8
-    # via google-auth
-pycparser==2.20
+pycparser==2.21
     # via cffi
-pycryptodome==3.11.0
+pycryptodome==3.14.1
     # via jupyterhub-ltiauthenticator
-pycryptodomex==3.11.0
+pycryptodomex==3.14.1
     # via pyjwkest
-pycurl==7.44.1
+pycurl==7.45.0
     # via -r requirements.in
 pyjwkest==1.4.2
     # via jupyterhub-ltiauthenticator
@@ -151,13 +157,13 @@ pyjwt==1.7.1
     #   mwoauth
 pymysql==1.0.2
     # via -r requirements.in
-pyopenssl==20.0.1
+pyopenssl==22.0.0
     # via
     #   certipy
     #   josepy
-pyparsing==2.4.7
+pyparsing==3.0.7
     # via packaging
-pyrsistent==0.18.0
+pyrsistent==0.18.1
     # via jsonschema
 python-dateutil==2.8.2
     # via
@@ -166,44 +172,43 @@ python-dateutil==2.8.2
     #   kubernetes
 python-json-logger==2.0.2
     # via jupyter-telemetry
-python-slugify==5.0.2
+python-slugify==6.1.1
     # via jupyterhub-kubespawner
-pyyaml==5.4.1
+pyyaml==6.0
     # via
     #   jupyterhub-kubespawner
     #   kubernetes
-requests==2.26.0
+requests-oauthlib==1.3.1
+    # via
+    #   kubernetes
+    #   mwoauth
+requests==2.27.1
     # via
     #   jupyterhub
     #   kubernetes
     #   mwoauth
     #   pyjwkest
     #   requests-oauthlib
-requests-oauthlib==1.3.0
-    # via
-    #   kubernetes
-    #   mwoauth
-rsa==4.7.2
+rsa==4.8
     # via google-auth
-ruamel-yaml==0.17.16
+ruamel.yaml==0.17.21
     # via jupyter-telemetry
 six==1.16.0
     # via
     #   bcrypt
-    #   jsonschema
+    #   google-auth
     #   kubernetes
     #   mwoauth
     #   onetimepass
     #   pyjwkest
-    #   pyopenssl
     #   python-dateutil
-sqlalchemy==1.4.23
+sqlalchemy-cockroachdb==1.4.3
+    # via -r requirements.in
+sqlalchemy==1.4.32
     # via
     #   alembic
     #   jupyterhub
     #   sqlalchemy-cockroachdb
-sqlalchemy-cockroachdb==1.4.3
-    # via -r requirements.in
 statsd==3.3.0
     # via -r requirements.in
 text-unidecode==1.3
@@ -213,20 +218,24 @@ tornado==6.1
     #   jupyterhub
     #   jupyterhub-idle-culler
     #   jupyterhub-ldapauthenticator
-traitlets==5.1.0
+traitlets==5.1.1
     # via
     #   jupyter-telemetry
     #   jupyterhub
     #   jupyterhub-ldapauthenticator
-urllib3==1.26.6
+urllib3==1.26.8
     # via
     #   jupyterhub-kubespawner
     #   kubernetes
     #   requests
-websocket-client==1.2.1
+websocket-client==1.3.1
     # via kubernetes
-wrapt==1.13.3
+wrapt==1.14.0
     # via deprecated
+zipp==3.7.0
+    # via
+    #   importlib-metadata
+    #   importlib-resources
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
