--- a/.github/workflows/support-bot.yml
+++ b/.github/workflows/support-bot.yml
@@ -21,7 +21,9 @@ jobs:
 
             I closed this issue because it was labelled as a support question.
 
-            Please help us organize discussion by posting this on the http://discourse.jupyter.org/ forum.
+            Please help us organize discussion by posting this on the http://discourse.jupyter.org/ forum. If it's your first time posting
+            please read https://discourse.jupyter.org/t/getting-good-answers-to-your-questions/1825.
+            The more information you provide the more likely we can help you.
 
             Our goal is to sustain a positive experience for both users and developers. We use GitHub issues for specific discussions related to changing a repository's content, and let the forum be where we can more generally help and inspire each other.
 
