--- a/jupyterhub/templates/proxy/pdb.yaml
+++ b/jupyterhub/templates/proxy/pdb.yaml
@@ -1,5 +1,6 @@
 {{- if .Values.proxy.chp.pdb.enabled -}}
-{{- if .Capabilities.APIVersions.Has "policy/v1" }}
+{{- if .Capabilities.APIVersions.Has "policy/v1" -}}
+{{- /* k8s 1.21+ required */ -}}
 apiVersion: policy/v1
 {{- else }}
 apiVersion: policy/v1beta1
