--- a/.github/workflows/test-chart.yaml
+++ b/.github/workflows/test-chart.yaml
@@ -124,32 +124,22 @@ jobs:
         # k3s-version: https://github.com/rancher/k3s/tags
         # k3s-channel: https://update.k3s.io/v1-release/channels
         include:
-          - k3s-channel: v1.23
+          - k3s-channel: latest
             test: install
-          - k3s-channel: v1.22
+          - k3s-channel: stable
             test: install
-          - k3s-channel: v1.21
-            test: install
-          - k3s-channel: v1.20
-            test: install
-          - k3s-channel: v1.19
-            test: install
-          - k3s-channel: v1.18 # also test prePuller.hook
+          - k3s-channel: v1.21 # also test prePuller.hook
             test: install
             local-chart-extra-args: >-
               --set prePuller.hook.enabled=true
               --set prePuller.hook.pullOnlyOnChanges=true
-          - k3s-channel: v1.17 # also test hub.existingSecret
+          - k3s-channel: v1.20 # also test hub.existingSecret
             test: install
             local-chart-extra-args: >-
               --set hub.existingSecret=test-hub-existing-secret
               --set proxy.secretToken=aaaa1111
               --set hub.cookieSecret=bbbb2222
               --set hub.config.CryptKeeper.keys[0]=cccc3333
-            # ingress.ingressClassName requires k8s 1.18 and above, don't
-            # validate setting it against the k8s api-server on k8s 1.17.
-            helm-template-validate-extra-args: >-
-              --set ingress.ingressClassName=""
             create-k8s-test-resources: true
 
           # We run two upgrade tests where we first install an already released
@@ -164,7 +154,7 @@ jobs:
           # The upgrade-from input should match the version information from
           # https://jupyterhub.github.io/helm-chart/info.json
           #
-          - k3s-channel: v1.19
+          - k3s-channel: v1.23
             test: upgrade
             upgrade-from: stable
             upgrade-from-extra-args: >-
@@ -177,7 +167,7 @@ jobs:
               --set hub.db.type=sqlite-pvc
               --set singleuser.storage.type=dynamic
             create-k8s-test-resources: true
-          - k3s-channel: v1.19
+          - k3s-channel: v1.23
             test: upgrade
             upgrade-from: dev
             upgrade-from-extra-args: >-
