Adding in the ability to use the https proxy port on ingress if the http port is disabled

--- a/jupyterhub/templates/ingress.yaml
+++ b/jupyterhub/templates/ingress.yaml
@@ -23,7 +23,11 @@ spec:
               service:
                 name: {{ include "jupyterhub.proxy-public.fullname" $ }}
                 port:
+                  {{- if ne .Values.proxy.service.disableHttpPort true }}
                   name: http
+                  {{ else }}
+                  name: https
+                  {{ end }}
       {{- if $host }}
       host: {{ $host | quote }}
       {{- end }}
