--- a/images/hub/requirements.txt
+++ b/images/hub/requirements.txt
@@ -8,7 +8,7 @@ aiohttp==3.8.1
     # via kubernetes-asyncio
 aiosignal==1.2.0
     # via aiohttp
-alembic==1.7.6
+alembic==1.7.7
     # via jupyterhub
 async-generator==1.10
     # via jupyterhub
@@ -18,7 +18,7 @@ attrs==21.4.0
     # via
     #   aiohttp
     #   jsonschema
-bcrypt==3.2.0
+bcrypt==3.2.2
     # via
     #   jupyterhub-firstuseauthenticator
     #   jupyterhub-nativeauthenticator
@@ -36,7 +36,7 @@ charset-normalizer==2.0.12
     # via
     #   aiohttp
     #   requests
-cryptography==36.0.1
+cryptography==37.0.2
     # via
     #   josepy
     #   jwcrypto
@@ -61,26 +61,22 @@ idna==3.3
     # via
     #   requests
     #   yarl
-jinja2==3.0.3
+importlib-metadata==4.11.3
+    # via alembic
+importlib-resources==5.7.1
+    # via
+    #   alembic
+    #   jsonschema
+jinja2==3.1.2
     # via
     #   jupyterhub
     #   jupyterhub-kubespawner
-josepy==1.12.0
+josepy==1.13.0
     # via jupyterhub-ltiauthenticator
-jsonschema==4.4.0
+jsonschema==4.5.1
     # via jupyter-telemetry
 jupyter-telemetry==0.1.0
     # via jupyterhub
-jupyterhub==2.3.0
-    # via
-    #   -r requirements.in
-    #   jupyterhub-firstuseauthenticator
-    #   jupyterhub-kubespawner
-    #   jupyterhub-ldapauthenticator
-    #   jupyterhub-ltiauthenticator
-    #   jupyterhub-nativeauthenticator
-    #   nullauthenticator
-    #   oauthenticator
 jupyterhub-firstuseauthenticator==1.0.0
     # via -r requirements.in
 jupyterhub-hmacauthenticator==1.0
@@ -97,15 +93,25 @@ jupyterhub-nativeauthenticator==1.0.5
     # via -r requirements.in
 jupyterhub-tmpauthenticator==0.6
     # via -r requirements.in
-jwcrypto==1.0
+jupyterhub==2.3.0
+    # via
+    #   -r requirements.in
+    #   jupyterhub-firstuseauthenticator
+    #   jupyterhub-kubespawner
+    #   jupyterhub-ldapauthenticator
+    #   jupyterhub-ltiauthenticator
+    #   jupyterhub-nativeauthenticator
+    #   nullauthenticator
+    #   oauthenticator
+jwcrypto==1.2
     # via jupyterhub-ltiauthenticator
-kubernetes-asyncio==21.7.1
+kubernetes-asyncio==22.6.4
     # via jupyterhub-kubespawner
 ldap3==2.9.1
     # via jupyterhub-ldapauthenticator
-mako==1.1.6
+mako==1.2.0
     # via alembic
-markupsafe==2.1.0
+markupsafe==2.1.1
     # via
     #   jinja2
     #   mako
@@ -135,7 +141,7 @@ pamela==1.0.0
     # via jupyterhub
 pem==21.2.0
     # via jupyterhub-ltiauthenticator
-prometheus-client==0.13.1
+prometheus-client==0.14.1
     # via jupyterhub
 psycopg2-binary==2.9.3
     # via -r requirements.in
@@ -164,7 +170,7 @@ pyopenssl==22.0.0
     # via
     #   certipy
     #   josepy
-pyparsing==3.0.7
+pyparsing==3.0.8
     # via packaging
 pyrsistent==0.18.1
     # via jsonschema
@@ -175,39 +181,38 @@ python-dateutil==2.8.2
     #   kubernetes-asyncio
 python-json-logger==2.0.2
     # via jupyter-telemetry
-python-slugify==6.1.1
+python-slugify==6.1.2
     # via jupyterhub-kubespawner
 pyyaml==6.0
     # via
     #   jupyterhub-kubespawner
     #   kubernetes-asyncio
+requests-oauthlib==1.3.1
+    # via mwoauth
 requests==2.27.1
     # via
     #   jupyterhub
     #   mwoauth
     #   pyjwkest
     #   requests-oauthlib
-requests-oauthlib==1.3.1
-    # via mwoauth
-ruamel-yaml==0.17.21
+ruamel.yaml.clib==0.2.6
+    # via ruamel.yaml
+ruamel.yaml==0.17.21
     # via jupyter-telemetry
-ruamel-yaml-clib==0.2.6
-    # via ruamel-yaml
 six==1.16.0
     # via
-    #   bcrypt
     #   kubernetes-asyncio
     #   mwoauth
     #   onetimepass
     #   pyjwkest
     #   python-dateutil
-sqlalchemy==1.4.32
+sqlalchemy-cockroachdb==1.4.3
+    # via -r requirements.in
+sqlalchemy==1.4.36
     # via
     #   alembic
     #   jupyterhub
     #   sqlalchemy-cockroachdb
-sqlalchemy-cockroachdb==1.4.3
-    # via -r requirements.in
 statsd==3.3.0
     # via -r requirements.in
 text-unidecode==1.3
@@ -222,15 +227,19 @@ traitlets==5.1.1
     #   jupyter-telemetry
     #   jupyterhub
     #   jupyterhub-ldapauthenticator
-urllib3==1.26.8
+urllib3==1.26.9
     # via
     #   jupyterhub-kubespawner
     #   kubernetes-asyncio
     #   requests
-wrapt==1.14.0
+wrapt==1.14.1
     # via deprecated
 yarl==1.7.2
     # via aiohttp
+zipp==3.8.0
+    # via
+    #   importlib-metadata
+    #   importlib-resources
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
